Update to Atlas 1.0